--- a/manifests/longhorn.yaml
+++ b/manifests/longhorn.yaml
@@ -13,19 +13,19 @@ spec:
   valuesContent: |-
     defaultSettings:
       allowCollectingLonghornUsageMetrics: false
-      defaultReplicaCount: 2
+      defaultReplicaCount: "2"
       replicaAutoBalance: best-effort
-      storageMinimalAvailablePercentage: 10
-      storageReservedPercentageForDefaultDisk: 0
+      storageMinimalAvailablePercentage: "10"
+      storageReservedPercentageForDefaultDisk: "0"
     ingress:
       enabled: true
       host: longhorn.rgsdemo.com
       tls: true
       ingressClassName: traefik
       annotations:
-        traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-auth@kubernetescrd
+        traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-basicauth@kubernetescrd
     networkPolicies:
       enabled: true
     persistence:
-      defaultClassReplicaCount: 2
+      defaultClassReplicaCount: "2"
       defaultDataLocality: best-effort
