--- a/manifests/middleware.yaml
+++ b/manifests/middleware.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: auth
+  name: basicauth
   namespace: longhorn-system
 spec:
   basicAuth:
